infrastructure/longhorn/longhorn-basic-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: longhorn
spec:
  basicAuth:
    secret: basic-auth-secret
