infrastructure/longhorn/longhorn-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: longhorn
spec:
  basicAuth:
    secret: basic-auth-secret
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-noslash
  namespace: longhorn
spec:
  redirectRegex:
    permanent: true
    regex: ^(https?://[^/]+/longhorn)$
    replacement: ${1}/
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: replacepath-longhorn-ui
  namespace: longhorn
spec:
  replacePathRegex:
    regex: ^/longhorn/(.*)
    replacement: /${1}
